k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: sso-test-service
    labels:
        app: sso-test
spec:
    type: ClusterIP
    selector:
        app: sso-test
    ports:
        - port: 80
          targetPort: 80
          protocol: TCP
